    - debian/patches/various-lsb-fixes.dpatch: Remove, incorporated upstream

    - debian/patches/0list: adjust accordingly
                            Also, prune ia64-reloc-none from the list.
			    I can't tell from the code snippet if this
			    has been incorporated or not.

    - .cvsignore: Add the stamp directories

  * XXX Below here was during the 2.2.94 development, and never released.

  * Jeff Bailey <jbailey@nisa.net>
    - Upgrade tarballs to 2.2.94
    - version: Update to 2.2.94

    - debian/patches/cvs: Remove
    - debian/patches/manual-texinfo4: Remove, incorporated upstream.
    - debian/patches/i386-mathinline.dpatch: Remove, glibc headers require
      ANSI compilers.
    - debian/patches/db1-addon-enabler.dpatch: Remove
    - debian/patches/0list: adjust accordingly

    - debian/patches/0list: Comment out string2-pointer-arith.
      This was originally created to fix #44697, but without this
      patch, 44697 is no longer reproducable.

    - debian/patches/fhs-linux-paths.dpatch: Update to new template format

    - .cvsignore: New file
  
  * XXX Below here was during the 2.2.93 development, and never released.

  * Jeff Bailey <jbailey@nisa.net>
     - Upgrade tarballs to 2.2.93
     - version: Update to 2.2.93

     The following important patches are still disabled:

       glibc22-hppa-pthreads, glibc22-hppa-rela, ia64-perf

     - debian/patches/0list: prune commented out patches that won't
       be needed anymore

     - debian/patches/ia64-reloc-none.dpatch: Updated, thank to
       Randolph Chung <randolph@tausq.org>

     - debian/make-cvs-patch.sh: New file.

     - debian/patches/template.dpatch: Update headers to new format.

     - debian/patches/hurd-ioperms.dpatch - Deleted
     - debian/patches/hurd-lfs64.dpatch - Deleted
     - debian/patches/hurd-update.dpatch - Deleted
     - debian/patches/syserrlist.dpatch - Deleted

     - debian/README - More updates
