@@ -123,8 +123,10 @@ endif
 	rm -f $(objdir)/configparms
 	echo "CC = $(CC)"		  >> $(objdir)/configparms
 	echo "BUILD_CC = $(BUILD_CC)"	  >> $(objdir)/configparms
-	echo "CFLAGS = $(HOST_CFLAGS)"	  >> $(objdir)/configparms
-	echo "BUILD_CFLAGS = -O2"	  >> $(objdir)/configparms
+#	DISABLE CFLAGS for now until better solution is found
+#	for ldconfig miscompile - JB 2002-Oct-03
+#	echo "CFLAGS = $(HOST_CFLAGS)"	  >> $(objdir)/configparms
+#	echo "BUILD_CFLAGS = -O2"	  >> $(objdir)/configparms
 	echo "BASH := /bin/bash"	  >> $(objdir)/configparms
 	echo "KSH := /bin/bash"		  >> $(objdir)/configparms
 	echo "mandir = $(mandir)"	  >> $(objdir)/configparms
