@@ -14,6 +14,9 @@ glibc (2.3-1) unstable; urgency=low
 
     - .cvsignore: Add the stamp directories
 
+    - debian/rules: Don't put CFLAGS in configparms, resolves ldconfig
+      miscompile on i386
+
   * XXX Below here was during the 2.2.94 development, and never released.
 
   * Jeff Bailey <jbailey@nisa.net>
